--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,11 @@
         </activity>
         <activity android:name=".DetailedMovieActivity" >
         </activity>
+        <provider
+            android:authorities="@string/content_authority"
+            android:name=".database.MovieProvider"
+            android:exported="false">
+        </provider>
     </application>
 
 </manifest>
